--- a/sharqiyya-ember/package.json
+++ b/sharqiyya-ember/package.json
@@ -27,6 +27,8 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-mirage": "^1.1.6",
+    "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-qunit": "^4.1.1",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-shims": "^1.2.0",
@@ -36,6 +38,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-moment": "^8.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.1.0",
     "ember-welcome-page": "^3.0.0",
