--- a/sharqiyya-ember/package.json
+++ b/sharqiyya-ember/package.json
@@ -17,6 +17,7 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~3.1.3",
@@ -34,6 +35,7 @@
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-concurrency": "^1.1.6",
     "ember-data": "~3.1.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
@@ -42,6 +44,7 @@
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.1.0",
     "ember-welcome-page": "^3.0.0",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-ember": "^5.0.0",
     "loader.js": "^4.2.3",
     "sass": "^1.26.0"
